update role
